--- a/frontend/src/pages/Auth/auth.css
+++ b/frontend/src/pages/Auth/auth.css
@@ -1,4 +1,36 @@
-.main{
-    width: 100%;
-    height: 100%;
+.main-container {
+  width: 100%;
+  height: 100vh;
+}
+.signup-form {
+  height: 100%;
+  width: 50%;
+}
+.greeting-section {
+  height: 100%;
+  width: 50%;
+  background-color: white;
+  border-radius: 0px 200px 200px 0px;
+}
+
+.greeting {
+  height: 50%;
+  width: 70%;
+}
+.greeting p {
+  font-size: 28px;
+}
+.greeting h1 {
+    font-size: 42px;
+}
+.greeting button{
+    width: 200px;
+    height: 50px;
+    font-size: x-large ;
+    font-weight: bold;
+    background-color: white;
+    border: solid 3px #084f09;
+    color: #084f09;
+    border-radius: 15px;
+    cursor:pointer;
 }
