--- a/frontend/src/pages/Auth/auth.css
+++ b/frontend/src/pages/Auth/auth.css
@@ -2,17 +2,13 @@
   width: 100%;
   height: 100vh;
 }
-.signup-form {
-  height: 100%;
-  width: 50%;
-}
+
 .greeting-section {
   height: 100%;
   width: 50%;
   background-color: white;
   border-radius: 0px 200px 200px 0px;
 }
-
 .greeting {
   height: 50%;
   width: 70%;
@@ -21,16 +17,49 @@
   font-size: 28px;
 }
 .greeting h1 {
-    font-size: 42px;
+  font-size: 54px;
 }
-.greeting button{
-    width: 200px;
-    height: 50px;
-    font-size: x-large ;
-    font-weight: bold;
-    background-color: white;
-    border: solid 3px #084f09;
-    color: #084f09;
-    border-radius: 15px;
-    cursor:pointer;
+.auth-button {
+  width: 200px;
+  height: 50px;
+  font-size: x-large;
+  font-weight: bold;
+  border-radius: 15px;
+  cursor: pointer;
+}
+.greeting .auth-button {
+  background-color: white;
+  border: solid 3px #084f09;
+  color: #084f09;
+}
+.greeting .auth-button:hover {
+  background-color: #084f09;
+  color: white;
+}
+.signup-section{
+  height: 100%;
+  width: 50%;
+}
+.signup-form {
+  height: 50%;
+  width: 70%;
+}
+.signup-form h1{
+  font-size: 54px;
+  color: white;
+}
+.signup-form .auth-button {
+  background-color: #084f09;
+  color: white;
+}
+.signup-form .auth-button:hover {
+  background-color: white;
+  color: #084f09;
+  border: solid 3px #084f09;
+}
+.auth-inputs {
+  border-radius: 7px;
+  width: 70%;
+  height: 40px;
+  padding:10px ;
 }
