--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -17,3 +17,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.logo{
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+}
