--- a/frontend/src/pages/Landing/landing.css
+++ b/frontend/src/pages/Landing/landing.css
@@ -23,3 +23,17 @@
     color:white;
     cursor: pointer;
 }
+.hero-section{
+    background-color: #84B17F;
+    width: 100%;
+    height: 80vh;
+    gap:70px;
+}
+.hero-section h1{
+    font-size:  xxx-large;
+}
+.hero-section p{
+    width: 60%;
+    font-size: x-large;
+    text-align: center;
+}
