--- a/frontend/src/pages/Landing/landing.css
+++ b/frontend/src/pages/Landing/landing.css
@@ -1,39 +1,69 @@
-.landing-nav{
-    border-bottom: 1px solid grey;
-    width: 100%;
-    height: 80px;
+/* nav-bar-styling */
+.landing-nav {
+  border-bottom: 1px solid grey;
+  width: 100%;
+  height: 80px;
 }
-.login-nav-button{
-    height: 50px;
-    width: 100px;
-    font-size: larger;
-    font-weight: bold;
-    border-radius: 10px;
-    background-color: transparent;
-    color: #084f09;
-    cursor: pointer;
+.login-nav-button {
+  height: 50px;
+  width: 100px;
+  font-size: larger;
+  font-weight: bold;
+  border-radius: 10px;
+  background-color: transparent;
+  color: #084f09;
+  cursor: pointer;
 }
-.signup-nav-button{
-    height: 50px;
-    width: 100px;
-    font-size: larger;
-    font-weight: bold;
-    border-radius: 10px;
-    background-color: #084f09;
-    color:white;
-    cursor: pointer;
+.signup-nav-button {
+  height: 50px;
+  width: 100px;
+  font-size: larger;
+  font-weight: bold;
+  border-radius: 10px;
+  background-color: #084f09;
+  color: white;
+  cursor: pointer;
 }
-.hero-section{
-    background-color: #84B17F;
-    width: 100%;
-    height: 80vh;
-    gap:70px;
+/* hero section styling */
+.hero-section {
+  background-color: #84b17f;
+  width: 100%;
+  height: 80vh;
+  gap: 70px;
 }
-.hero-section h1{
-    font-size:  xxx-large;
+.hero-section h1 {
+  font-size: xxx-large;
 }
-.hero-section p{
-    width: 60%;
-    font-size: x-large;
-    text-align: center;
+.hero-section p {
+  width: 60%;
+  font-size: x-large;
+  text-align: center;
+}
+/* analytics styling */
+.analytics-section {
+  width: 100%;
+  height: 400px;
+}
+.analytics-cards {
+  width: 70%;
+  height: 300px;
+}
+.analytics-card {
+  padding: 20px;
+  width: 20%;
+  height: 200px;
+  background-color: #f0f0f0;
+  outline-style: 4px solid #84b17f;
+  border-radius: 30px;
+  border-right: 4px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 4px solid rgba(0, 0, 0, 0.1);
+}
+
+.analytics-card h1 {
+  font-size: 48px;
+}
+.analytics-card p {
+  text-align: center;
+  font-size: 28px;
+  font-weight: bold;
 }
