--- a/frontend/src/pages/Landing/landing.css
+++ b/frontend/src/pages/Landing/landing.css
@@ -32,7 +32,7 @@
   gap: 70px;
 }
 .hero-section h1 {
-  font-size: xxx-large;
+  font-size: 50px;
 }
 .hero-section p {
   width: 60%;
@@ -43,6 +43,9 @@
 .analytics-section {
   width: 100%;
   height: 400px;
+}
+.analytics-section h1 {
+font-size: 50px;
 }
 .analytics-cards {
   width: 70%;
@@ -66,4 +69,19 @@
   text-align: center;
   font-size: 28px;
   font-weight: bold;
+}
+/* stories section  */
+.story-section{
+  height: 400px;
+}
+.story-section h1{
+  font-size: 50px;
+}
+.story-card{
+  background-color: #084f09;
+  color:white;
+  height: 200px;
+  width: 55%;
+  font-size: x-large;
+  border-radius: 30px;
 }
