--- a/frontend/src/pages/Landing/landing.css
+++ b/frontend/src/pages/Landing/landing.css
@@ -26,7 +26,7 @@
 }
 /* hero section styling */
 .hero-section {
-  background-color: #84b17f;
+  background-image: linear-gradient(to bottom, #84b17f, white);
   width: 100%;
   height: 80vh;
   gap: 70px;
