--- a/frontend/src/pages/Landing/landing.css
+++ b/frontend/src/pages/Landing/landing.css
@@ -45,7 +45,7 @@
   height: 400px;
 }
 .analytics-section h1 {
-font-size: 50px;
+  font-size: 50px;
 }
 .analytics-cards {
   width: 70%;
@@ -71,17 +71,31 @@ font-size: 50px;
   font-weight: bold;
 }
 /* stories section  */
-.story-section{
+.story-section {
   height: 400px;
 }
-.story-section h1{
+.story-section h1 {
   font-size: 50px;
 }
-.story-card{
+.story-cards {
   background-color: #084f09;
-  color:white;
+  color: white;
   height: 200px;
   width: 55%;
   font-size: x-large;
   border-radius: 30px;
+  
+}
+.story-card{
+  height: 100%;
+  gap:30px;
+}
+
+.story-slider {
+  width: 700px;
+  padding: 20px;
+  margin:20px;
+}
+.slick-slider > div {
+  /* background-color: red; */
 }
