--- a/frontend/src/pages/Landing/landing.css
+++ b/frontend/src/pages/Landing/landing.css
@@ -56,7 +56,6 @@
   width: 20%;
   height: 200px;
   background-color: #f0f0f0;
-  outline-style: 4px solid #84b17f;
   border-radius: 30px;
   border-right: 4px solid rgba(0, 0, 0, 0.1);
   border-bottom: 4px solid rgba(0, 0, 0, 0.1);
@@ -84,18 +83,43 @@
   width: 55%;
   font-size: x-large;
   border-radius: 30px;
-  
 }
-.story-card{
+.story-card {
   height: 100%;
-  gap:30px;
+  gap: 30px;
 }
 
 .story-slider {
   width: 700px;
   padding: 20px;
-  margin:20px;
 }
-.slick-slider > div {
-  /* background-color: red; */
+/* service-section  */
+.service-section {
+  height: 500px;
+}
+.service-section h1 {
+  font-size: 50px;
+}
+.service-cards {
+  width: 70%;
+}
+.service-card {
+  height: 300px;
+  width: 250px;
+  background-color: #f0f0f0;
+  border-radius: 30px;
+  border-right: 4px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 4px solid rgba(0, 0, 0, 0.1);
+}
+.service-card-img {
+  width: 100%;
+  height: 40%;
+ align-items: end;
+ justify-content: center;
+}
+.service-card-text {
+  height: 70%;
+  text-align: center;
+  font-size: x-large;
+  padding: 10px;
 }
