--- a/frontend/src/pages/Landing/landing.css
+++ b/frontend/src/pages/Landing/landing.css
@@ -114,12 +114,73 @@
 .service-card-img {
   width: 100%;
   height: 40%;
- align-items: end;
- justify-content: center;
+  align-items: end;
+  justify-content: center;
 }
 .service-card-text {
   height: 70%;
   text-align: center;
   font-size: x-large;
   padding: 10px;
+}
+
+
+@media only screen and (max-width: 700px) {
+  /* hero section  */
+  .hero-section {
+    height: auto;
+    padding: 20px;
+  }
+
+  .hero-section h1 {
+    font-size: 36px;
+  }
+
+  .hero-section p {
+    width: 100%;
+    font-size: large;
+  }
+/* analytics section  */
+  .analytics-cards {
+    flex-direction: column;
+    width: 100%;
+    padding: 0 10px;
+    gap: 10px;
+  }
+
+  .analytics-card {
+    width: 60%;
+  }
+
+  .analytics-card h1 {
+    font-size: 32px;
+  }
+  .analytics-card p {
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+  }
+  /* stories section  */
+  .story-cards {
+    width: 100%;
+  }
+
+  .story-slider {
+    width: calc(100% - 40px);
+  }
+/* service-section  */
+.service-cards{
+
+  width: 100%;
+}
+.service-card{
+  
+  height: auto;
+  padding: 10px;
+  width: 100px;
+}
+.service-card p{
+  
+  font-size: 12px;
+}
 }
