--- a/frontend/src/pages/InvestorRoutes/components/CompleteProfile/completeProfile.css
+++ b/frontend/src/pages/InvestorRoutes/components/CompleteProfile/completeProfile.css
@@ -20,7 +20,6 @@
   width: 70%;
   height: fit-content;
   border-radius: 20px;
-  
 }
 .complete-profile-info {
   width: 100%;
@@ -30,7 +29,20 @@
   height: 30px;
   border-radius: 7px;
 }
-.investment-range{
-    width:100%;
-    gap:50px;
+.investment-range {
+  width: 100%;
+  gap: 50px;
+}
+.additional-info {
+  width: 100%;
+}
+.complete-profile-button {
+  width: 150px;
+  height: 40px;
+  font-size: x-large;
+  font-weight: bold;
+  border-radius: 15px;
+  cursor: pointer;
+  background-color: #084f09;
+  color: white;
 }
