frontend-adding-search-bar-in-investor-home-page

--- a/frontend/src/pages/InvestorRoutes/components/CompleteProfile/completeProfile.css
+++ b/frontend/src/pages/InvestorRoutes/components/CompleteProfile/completeProfile.css
@@ -1,7 +1,7 @@
 .investor-container {
   width: 100%;
 }
-.complete-profile-nav {
+.investor-nav {
   height: 80px;
   border-bottom: 1px solid grey;
 }
