--- a/frontend/src/pages/InvestorRoutes/components/InvestorHome/InvestorHome.css
+++ b/frontend/src/pages/InvestorRoutes/components/InvestorHome/InvestorHome.css
@@ -9,10 +9,37 @@
   border-radius: 30px 0px 0px 30px;
 }
 .search-icon {
-    background-color: #AAA9A9;
+  background-color: #AAA9A9;
   width: 10%;
   height: 100%;
   color:white;
-  
+  cursor: pointer;
   border-radius: 0px 30px 30px 0px;
+}
+.investor-businesses-container{
+width: 100%;
+height: 100vh;
+padding-top: 40px;
+background-color: rgb(27, 148, 148);
+}
+.investor-business{
+  width: 60%;
+  height: 250px;
+  background-color: white;
+  border-radius: 0px 30px 30px 0px;
+
+}
+.-right{
+  border-radius: 30px 0px 0px 30px;
+  margin-left: auto;
+}
+.investor-business-img{
+  background-color: red;
+  height: 100%;
+  width: 30%;
+}
+.investor-business-img img{
+  height: 100%;
+  width: 100%;
+
 }
