--- a/frontend/src/pages/InvestorRoutes/components/InvestorHome/InvestorHome.css
+++ b/frontend/src/pages/InvestorRoutes/components/InvestorHome/InvestorHome.css
@@ -9,50 +9,104 @@
   border-radius: 30px 0px 0px 30px;
 }
 .search-icon {
-  background-color: #AAA9A9;
+  background-color: #aaa9a9;
   width: 10%;
   height: 100%;
-  color:white;
+  color: white;
   cursor: pointer;
   border-radius: 0px 30px 30px 0px;
 }
-.investor-businesses-container{
-width: 100%;
-height: 100vh;
-padding-top: 40px;
-background-color: rgb(27, 148, 148);
+
+/* body css  */
+
+.investor-businesses-container {
+  width: 100%;
+  height: 100vh;
+  padding-top: 40px;
 }
-.investor-business{
+
+
+
+
+
+
+
+
+/* left card  */
+.investor-business-card {
   width: 60%;
   height: 250px;
-  background-color: white;
   border-radius: 0px 30px 30px 0px;
-
+  background-color: #84b17f;
+  border: 1px black solid;
 }
-.-right{
-  border-radius: 30px 0px 0px 30px;
-  margin-left: auto;
-}
-.investor-business-img{
-  background-color: red;
+.investor-business-img {
   height: 100%;
   width: 30%;
 }
-.investor-business-img img{
+.investor-business-img img {
   height: 100%;
   width: 100%;
+  border-radius: 0px 20px 20px 0px;
 }
-.investor-business-description{
+.investor-business-description {
+  color: white;
   width: 65%;
   height: 100%;
 }
-.investor-business-button{
+.investor-business-button {
   height: 35px;
   width: 130px;
   font-size: larger;
   font-weight: bold;
   border-radius: 10px;
-  background-color: green;
-  color: #084f09;
+  background-color: transparent;
+  color: white;
   cursor: pointer;
+  border: 1px solid white;
+}
+.investor-business-button:hover {
+  background-color: white;
+  color: #84b17f;
+}
+
+/* right  */
+.investor-business-card-right {
+  width: 60%;
+  height: 250px;
+  border-radius: 30px 0px 0px 30px;
+  background-color: #f6f6f6;
+  border: 1px black solid;
+  float: right;
+  margin-left: auto;
+
+}
+.investor-business-img {
+  height: 100%;
+  width: 30%;
+}
+.investor-business-img-right img {
+  height: 100%;
+  width: 100%;
+  border-radius: 20px 0px 0px 20px;
+}
+.investor-business-description-right {
+  color: black;
+  width: 70%;
+  height: 100%;
+}
+.investor-business-button-right{
+  height: 35px;
+  width: 130px;
+  font-size: larger;
+  font-weight: bold;
+  border-radius: 10px;
+  background-color: transparent;
+  color: #84b17f;
+  cursor: pointer;
+  border: 1px #84b17f solid;
+}
+.investor-business-button-right:hover {
+  background-color: #84b17f;
+  color: white;
 }
