--- a/frontend/src/pages/InvestorRoutes/components/CompleteProfile/completeProfile.css
+++ b/frontend/src/pages/InvestorRoutes/components/CompleteProfile/completeProfile.css
@@ -46,3 +46,17 @@
   background-color: #084f09;
   color: white;
 }
+
+
+.complete-profile-upload-image{ margin-right: auto;
+width: 150px;
+height: 150px;
+}
+.image-uploaded img{
+width: 100%;
+height: 100%;
+}
+.image-uploaded {
+  width: 100%;
+  height: 100%;
+  }
