--- a/frontend/src/pages/InvestorRoutes/components/CompleteProfile/completeProfile.css
+++ b/frontend/src/pages/InvestorRoutes/components/CompleteProfile/completeProfile.css
@@ -28,6 +28,7 @@
   width: 250px;
   height: 30px;
   border-radius: 7px;
+  padding: 10px;
 }
 .investment-range {
   width: 100%;
@@ -47,16 +48,26 @@
   color: white;
 }
 
+.complete-profile-upload-image {
+  margin-right: auto;
+  width: 150px;
+  height: 150px;
+}
 
-.complete-profile-upload-image{ margin-right: auto;
-width: 150px;
-height: 150px;
+.image-uploaded img {
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
 }
-.image-uploaded img{
-width: 100%;
-height: 100%;
+.custom-file-upload {
+  padding: 10px;
+  cursor: pointer;
+  background-color: white;
+  color: #000000;
+  border-radius: 5px;
+  font-size: 12px;
 }
-.image-uploaded {
-  width: 100%;
-  height: 100%;
-  }
+
+.custom-file-upload input {
+  display: none;
+}
