--- a/frontend/src/pages/Landing/landing.css
+++ b/frontend/src/pages/Landing/landing.css
@@ -26,15 +26,21 @@
 }
 /* hero section styling */
 .hero-section {
-  background-image: linear-gradient(to bottom, #84b17f, white);
+  background-image: url('../../../public/images/hero-bg.jpg');
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat;
   width: 100%;
   height: 80vh;
   gap: 70px;
 }
+
 .hero-section h1 {
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 50px;
 }
 .hero-section p {
+
   width: 60%;
   font-size: x-large;
   text-align: center;
