--- a/frontend/src/pages/InvestorRoutes/components/SingleBusiness/SingleBusiness.css
+++ b/frontend/src/pages/InvestorRoutes/components/SingleBusiness/SingleBusiness.css
@@ -1,5 +1,5 @@
 .single-business {
-  background-color: #f0f0f0;
+  position: relative;
   height: 600px;
   width: 70%;
   border-radius: 30px;
@@ -37,4 +37,15 @@
   background-color: #084f09;
   color: white;
   cursor: pointer;
+}
+.book-meeting-popup{ 
+  position: absolute; 
+  top: 50%; 
+  left: 50%; 
+  transform: translate(-50%, -50%);
+  background-color: #f0f0f0;
+  border:1px solid black;
+  border-radius: 20px;
+  height: 300px;
+  width: 300px;
 }
