--- a/frontend/src/pages/UserRoutes/pages/home.css
+++ b/frontend/src/pages/UserRoutes/pages/home.css
@@ -1,40 +1,52 @@
-.user-business{
-    width: 80%;
-    min-height: 100vh;
-    
+.user-business {
+  width: 80%;
+  min-height: 100vh;
 }
-.user-business-info{
-width: 100%;
-height: 70%;
-gap:50px;
+.user-business-info {
+  width: 100%;
+  height: 70%;
+  gap: 50px;
 }
-.user-business-info-container{
-width: 100%;
-gap:100px;
+.user-business-info-container {
+  width: 100%;
+  gap: 100px;
 }
-.user-business-title{
-    height: 15%;
+.user-business-title {
+  height: 15%;
 }
-.user-business-button{
-    height: 15%;
+.user-business-button {
+  height: 15%;
 }
 .user-business-info-input {
-    font-size: larger;
-
+  font-size: larger;
 }
-.user-business-info-input input{
-    height: 30px;
-    border-radius: 7px;
-    background-color: #F6F6F6;
-    width: 200px;
-    padding: 10px;
-    border: 1px solid #bbbbbb;
+.user-business-info-input input {
+  height: 30px;
+  border-radius: 7px;
+  background-color: #f6f6f6;
+  width: 200px;
+  padding: 10px;
+  border: 1px solid #bbbbbb;
 }
-.user-business-info-input textarea{
-    background-color: #f6f6f6;
-    padding: 10px;
-    border: 1px solid #bbbbbb;
-    border-radius: 7px;
-    width: 100%;
-
+.user-business-info-input textarea {
+  background-color: #f6f6f6;
+  padding: 10px;
+  border: 1px solid #bbbbbb;
+  border-radius: 7px;
+  width: 100%;
+}
+.user-business-button {
+  width: 150px;
+  height: 40px;
+  border-radius: 10px;
+  color: white;
+  font-size: larger;
+  font-weight: bold;
+  background-color: #084f09;
+  cursor: pointer;
+}
+.user-business-button:hover {
+  background-color: white;
+    color: #084f09;
+    border: 1px solid #084f09;
 }
