--- a/frontend/src/pages/Auth/auth.css
+++ b/frontend/src/pages/Auth/auth.css
@@ -1,4 +1,5 @@
 .main-container {
+  position: relative;
   width: 100%;
   height: 100vh;
 }
@@ -68,6 +69,8 @@
   height: 40px;
   padding: 10px;
 }
+
+
 @media only screen and (max-width: 768px) {
   .main-container {
     flex-direction: column;
