--- a/frontend/src/pages/InvestorRoutes/pages/InvestorHome/InvestorHome.css
+++ b/frontend/src/pages/InvestorRoutes/pages/InvestorHome/InvestorHome.css
@@ -27,13 +27,6 @@
 
 }
 
-
-
-
-
-
-
-
 /* left card  */
 .investor-business-card {
   width: 60%;
@@ -42,21 +35,28 @@
   background-color: #84b17f;
   border: 1px black solid;
 }
-.investor-business-img {
-  height: 100%;
-  width: 30%;
-}
+
 .investor-business-img img {
   height: 100%;
   width: 100%;
   border-radius: 0px 20px 20px 0px;
 }
 .investor-business-description {
+  position: relative;
   color: white;
   width: 65%;
   height: 100%;
+
 }
-.investor-business-button {
+.investor-business-button{
+
+  height: 20%;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+.investor-business-button button {
   height: 35px;
   width: 130px;
   font-size: larger;
@@ -66,8 +66,9 @@
   color: white;
   cursor: pointer;
   border: 1px solid white;
+  
 }
-.investor-business-button:hover {
+.investor-business-button button:hover {
   background-color: white;
   color: #84b17f;
 }
