--- a/frontend/src/pages/InvestorRoutes/pages/InvestorHome/InvestorHome.css
+++ b/frontend/src/pages/InvestorRoutes/pages/InvestorHome/InvestorHome.css
@@ -78,11 +78,10 @@
   width: 60%;
   height: 250px;
   border-radius: 30px 0px 0px 30px;
-  background-color: #f6f6f6;
+  background-color: #ffffff;
   border: 1px black solid;
   float: right;
   margin-left: auto;
-
 }
 .investor-business-img {
   height: 100%;
@@ -94,11 +93,18 @@
   border-radius: 20px 0px 0px 20px;
 }
 .investor-business-description-right {
-  color: black;
+  position: relative;
   width: 70%;
   height: 100%;
 }
-.investor-business-button-right{
+.investor-business-button-right {
+  height: 20%;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+.investor-business-button-right button{
   height: 35px;
   width: 130px;
   font-size: larger;
@@ -109,7 +115,7 @@
   cursor: pointer;
   border: 1px #84b17f solid;
 }
-.investor-business-button-right:hover {
+.investor-business-button-right button:hover {
   background-color: #84b17f;
   color: white;
 }
