--- a/frontend/src/pages/InvestorRoutes/pages/SingleBusiness/SingleBusiness.css
+++ b/frontend/src/pages/InvestorRoutes/pages/SingleBusiness/SingleBusiness.css
@@ -2,7 +2,7 @@
   position: relative;
   height: 600px;
   width: 70%;
-  border-radius: 30px;
+  border-radius: 30px;background-color: #f0f0f0;
 }
 .single-business-img {
   height: 200px;
@@ -37,6 +37,11 @@
   background-color: #084f09;
   color: white;
   cursor: pointer;
+}
+.single-business-button:hover {
+  background-color: white;
+  color:#084f09;
+  border: 1px solid #084f09;
 }
 .book-meeting-popup{ 
   position: absolute; 
