frontedn-adding-upolad-image-input-to-user-register-business-form

--- a/frontend/src/pages/UserRoutes/pages/register-business/register-business.css
+++ b/frontend/src/pages/UserRoutes/pages/register-business/register-business.css
@@ -1,6 +1,6 @@
 .register-business-container{
     background-color: #F6F6F6 ;
-    height: 80vh;
+    min-height: 80vh;
     width: 70%;
     border-radius: 30px;
 }
