--- a/frontend/src/pages/UserRoutes/pages/register-business/register-business.css
+++ b/frontend/src/pages/UserRoutes/pages/register-business/register-business.css
@@ -4,3 +4,14 @@
     width: 70%;
     border-radius: 30px;
 }
+.user-business-edit-info-input {
+    font-size: larger;
+  }
+  .user-business-edit-info-input input {
+    height: 30px;
+    border-radius: 7px;
+    background-color: #f6f6f6;
+    width: 250px;
+    padding: 10px;
+    border: 1px solid #bbbbbb;
+  }
