--- a/frontend/src/pages/InvestorRoutes/pages/SingleBusiness/SingleBusiness.css
+++ b/frontend/src/pages/InvestorRoutes/pages/SingleBusiness/SingleBusiness.css
@@ -48,7 +48,7 @@
   top: 50%; 
   left: 50%; 
   transform: translate(-50%, -50%);
-  background-color: #f0f0f0;
+  background-color: grey;
   border:1px solid black;
   border-radius: 20px;
   height: 250px;
@@ -75,6 +75,7 @@
   color: white;
   border-radius: 70px;
   cursor: pointer;
+  
 }
 .close-icon{
   cursor: pointer;
