--- a/frontend/src/pages/InvestorRoutes/pages/InvestorHome/InvestorHome.css
+++ b/frontend/src/pages/InvestorRoutes/pages/InvestorHome/InvestorHome.css
@@ -33,7 +33,7 @@
   height: 250px;
   border-radius: 0px 30px 30px 0px;
   background-color: #84b17f;
-  border: 1px black solid;
+  border: 1px #aaa9a9 solid;
 }
 
 .investor-business-img img {
@@ -79,7 +79,7 @@
   height: 250px;
   border-radius: 30px 0px 0px 30px;
   background-color: #ffffff;
-  border: 1px black solid;
+  border: 1px solid  #c2dfbf;
   float: right;
   margin-left: auto;
 }
