--- a/frontend/src/pages/Video/video.css
+++ b/frontend/src/pages/Video/video.css
@@ -22,10 +22,15 @@
     width: 100px;
     cursor: pointer;
   }
-  
+ .camera-view{
+    width: 100%;
+    background-color: red;
+    gap:100px;
+ }
 
   .controls{
     height: 50px;
+    width: 100%;
   }
   .controls button{
     height: 40px;
@@ -35,4 +40,17 @@
     cursor: pointer;
     background-color: white;
     color: #084f09;
+  }
+
+  .meet-container{
+    background-color: #bbbbbb;
+    width: 100%;
+    height: 100vh;
+  }
+  .join-button{
+    background-color: white;
+    height: 30px;
+    width: 60px;
+    cursor: pointer;
+    border-radius: 5px;
   }
