--- a/frontend/src/pages/AdminRoutes/Home/home.css
+++ b/frontend/src/pages/AdminRoutes/Home/home.css
@@ -5,9 +5,6 @@
    
     width: 70%;
 }
-.invite-investor-inputs{
-  
-}
 .invite-investor-inputs input{
     height: 30px;
     width: 400px;
@@ -21,4 +18,5 @@
     border-radius: 7px;
     background-color:  #084f09;
     color: white;
+    cursor: pointer;
 }
