--- a/frontend/src/pages/Landing/landing.css
+++ b/frontend/src/pages/Landing/landing.css
@@ -83,7 +83,7 @@
   font-size: 50px;
 }
 .story-cards {
-  background-color: #084f09;
+  background-color: #84B17F;
   color: white;
   height: 200px;
   width: 55%;
