--- a/frontend/src/pages/Landing/landing.css
+++ b/frontend/src/pages/Landing/landing.css
@@ -26,17 +26,17 @@
 }
 /* hero section styling */
 .hero-section {
-  background-image: url('../../../public/images/illustration-3.png');
+  background-image: url('../../../public/images/landing-bg.png');
   background-size: cover; 
   background-position: center; 
   background-repeat: no-repeat;
   width: 100%;
   height: 80vh;
   gap: 70px;
+  color:white;
 }
 
 .hero-section h1 {
-  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 50px;
 }
 .hero-section p {
