--- a/frontend/src/pages/Landing/landing.css
+++ b/frontend/src/pages/Landing/landing.css
@@ -49,30 +49,31 @@
 .analytics-section {
   width: 100%;
   height: 400px;
+
 }
 .analytics-section h1 {
   font-size: 50px;
 }
 .analytics-cards {
   width: 70%;
-  height: 300px;
+  height: 400px;
+  
 }
 .analytics-card {
   padding: 20px;
-  width: 20%;
-  height: 200px;
+  width: 250px;
+  height: 250px;
   background-color: #f0f0f0;
   border-radius: 30px;
-  border-right: 4px solid rgba(0, 0, 0, 0.1);
-  border-bottom: 4px solid rgba(0, 0, 0, 0.1);
+
 }
 
 .analytics-card h1 {
-  font-size: 48px;
+  font-size: 62px;
 }
 .analytics-card p {
   text-align: center;
-  font-size: 28px;
+  font-size: 32px;
   font-weight: bold;
 }
 /* stories section  */
