--- a/frontend/src/pages/Landing/landing.css
+++ b/frontend/src/pages/Landing/landing.css
@@ -78,22 +78,24 @@
 }
 /* stories section  */
 .story-section {
-  height: 400px;
+  height: 500px;
+  gap:60px;
 }
 .story-section h1 {
   font-size: 50px;
 }
 .story-cards {
-  background-color: #84B17F;
+  background-image: linear-gradient(to right,#84B17F,#384B36);
   color: white;
-  height: 200px;
+  height: 250px;
   width: 55%;
   font-size: x-large;
   border-radius: 30px;
+  
 }
 .story-card {
   height: 100%;
-  gap: 30px;
+  gap: 50px;
 }
 
 .story-slider {
