--- a/frontend/src/pages/Landing/landing.css
+++ b/frontend/src/pages/Landing/landing.css
@@ -80,7 +80,7 @@
   gap:60px;
 }
 .story-section h1 {
-  font-size: 80px;
+  font-size: 70px;
 }
 .story-cards {
   background-image: linear-gradient(to right,#84B17F,#384B36);
@@ -102,33 +102,41 @@
 }
 /* service-section  */
 .service-section {
-  height: 500px;
+  height: 700px;
+  gap:50px;
+ 
 }
 .service-section h1 {
-  font-size: 50px;
+  font-size: 70px;
 }
 .service-cards {
   width: 70%;
+
 }
 .service-card {
-  height: 300px;
-  width: 250px;
+  height: 400px;
+  width: 300px;
   background-color: #F1F2F3;
-  border-radius: 30px;
+  border-radius: 20px;
 }
 .service-card-img {
   width: 100%;
   height: 40%;
-  align-items: end;
   justify-content: center;
+
 }
 .service-card-text {
-  height: 70%;
+  height: 60%;
   text-align: center;
-  font-size: x-large;
-  padding: 10px;
+  font-size: 26px;
+  padding: 18px;
+  
 }
-
+.service-card-img-logo{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
 
 @media only screen and (max-width: 700px) {
   /* hero section  */
