--- a/frontend/src/pages/Auth/auth.css
+++ b/frontend/src/pages/Auth/auth.css
@@ -16,14 +16,18 @@
   border-radius: 200px 0px 0px 200px;
 }
 .greeting {
-  height: 50%;
+  height: 80%;
   width: 70%;
+}
+.login-img{
+  height: 300px;
 }
 .greeting p {
   font-size: 28px;
+  text-align: center;
 }
 .greeting h1 {
-  font-size: 54px;
+  font-size: 44px;
 }
 .auth-button {
   width: 200px;
@@ -47,28 +51,30 @@
   width: 50%;
 }
 .auth-form {
-
-  height: 50%;
+  height: 80%;
   width: 70%;
 }
 .auth-form h1 {
   font-size: 54px;
   color: white;
 }
-.auth-form .auth-button {
+ .auth-button {
   background-color: #084f09;
   color: white;
 }
-.auth-form .auth-button:hover {
+.auth-button:hover {
   background-color: white;
   color: #084f09;
   border: solid 3px #084f09;
 }
 .auth-inputs {
-  border-radius: 7px;
+  border-radius: 10px;
   width: 70%;
-  height: 40px;
+  height: 50px;
   padding: 10px;
+}
+.auth-form-inputs{
+  gap:120px;
 }
 
 
