--- a/frontend/src/pages/InvestorRoutes/pages/InvestorHome/InvestorHome.css
+++ b/frontend/src/pages/InvestorRoutes/pages/InvestorHome/InvestorHome.css
@@ -32,7 +32,7 @@
   width: 60%;
   height: 250px;
   border-radius: 0px 30px 30px 0px;
-  background-color: #84b17f;
+  background-image: linear-gradient(#84B17F,#384B36);
   border: 1px #aaa9a9 solid;
 }
 
@@ -78,7 +78,7 @@
   width: 60%;
   height: 250px;
   border-radius: 30px 0px 0px 30px;
-  background-color: #ffffff;
+  background-color: #f1f2f3;
   border: 1px solid  #c2dfbf;
   float: right;
   margin-left: auto;
